# Infinity

./: README.md  env.template
.claude/: ROADMAP.md
app/: main.py
app/config/: database.py  logging.py  redis.py  settings.py
app/core/: dependencies.py  events.py  exceptions.py  middleware.py  security.py
app/models/: __init__.py  analytics.py  associations.py  base.py  content.py  session.py  topic.py  user.py
backend/: .dockerignore  .gitignore  Dockerfile.dev  Dockerfile.test  README.md  alembic.ini  compose.dev.yaml  compose.test.yaml  create_tables.py  main.py  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: d83e2311e6e5_initial_migration_with_user_model.py
backend/app/: main.py
backend/app/api/: __init__.py  api.py
backend/app/api/errors/: __init__.py  exceptions.py
backend/app/api/routes/: __init__.py  auth.py  card.py  explanation.py  items.py  langchain_routes.py  learning.py  topics.py  user.py  users.py
backend/app/config/: __init__.py  database.py  redis.py  settings.py
backend/app/core/: __init__.py  config.py  db.py  dependencies.py  events.py  middleware.py  security.py
backend/app/db/: database.py
backend/app/models/: __init__.py  card.py  card_interaction.py  generation_cache.py  learning_session.py  mixins.py  topic.py  user.py
backend/app/schemas/: __init__.py  card.py  explanation.py  item.py  learning.py  topic.py  user.py
backend/app/services/: __init__.py  learning.py  user.py
backend/app/services/card/: __init__.py  card_service.py
backend/app/services/explanation/: explaination_service.py
backend/app/services/learning/: __init__.py  learning_service.py  prompts.py
backend/app/services/topics/: __init__.py  topic_service.py
backend/docker/: Dockerfile.dev
backend/models/: __init__.py  item.py  user.py
backend/requirements/: dev.txt  prod.txt
backend/tests/: __init__.py  conftest.py  helpers.py
backend/tests/api/: __init__.py
backend/tests/api/routes/: __init__.py  test_auth.py
client/: package-lock.json  package.json
client/src/app/: app-layout.tsx  globals.css  page.tsx
client/src/app/dashboard/: layout.tsx
client/src/components/card/: card-demo.tsx  learning-card.tsx
server/: .dockerignore  .gitignore  Dockerfile  README.md  build.gradle  docker-compose.yml  gradlew  gradlew.bat  settings.gradle
server/src/main/resources/: application-dev.yml  application-docker.yml  application.yml
(+18 files in other folders)
