[project]
name = "app"
version = "0.1.0"
description = "infinity backend"
authors = [
    {name = "Utkarsh Priyadarshi",email = "utkarshpriyadarshi5026@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "databases[sqlite] (>=0.9.0,<0.10.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "langchain-anthropic (>=0.3.18,<0.4.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]

[tool.poetry]
packages = [
    {include = "app"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.0"
watchfiles = "^1.1.0"
debugpy = "^1.8.16"
jupyter = "^1.0.0"
jupyterlab = "^4.0.0"
ipykernel = "^6.29.0"
notebook = "^7.0.0"

